# verifiers

./: .gitignore  COLDSTART.md  Dockerfile  README.md  cli.py  convert_chat_to_prompt_completions.py  fastapi_server.py  fly.toml  inference.py  merge_jsonl.py  prompt_template.jinja  pyproject.toml  questions.json  reflect.py  registry_loader.py  render_prompt.py  requirements.txt  run_haiku.py  synthetic.py  synthetic_dataset.jsonl  verifier_registry.json
coldstart/: math.jsonl  math_completions.jsonl  merged.jsonl  merged_completions.jsonl  new.jsonl  new_completions.jsonl  original.jsonl
dataset/chris/: morse.jsonl  train.jsonl
dataset/coldstart/: test.jsonl  train.jsonl  valid.jsonl
dataset/coldstart_completions/: test.jsonl  valid.jsonl
samples/haikus/poetry/: my_haiku_invalid.txt  phi4_haiku.txt
samples/language/morse/: valid_morse_to_text.txt  valid_text_to_morse.txt
samples/math/: invalid_boxed_answer.txt  valid_boxed_answer.txt
samples/poetry/limericks/: granite_limerick.txt  invalid_limerick.txt  my_limerick.txt  phi4_limerick.txt
samples/poetry/rhymes/: invalid_rhyme.txt  valid_rhyme.txt
verifiers/: base_verifier.py  is_n_words_verifier.py  line_count_verifier.py  syllable_verifier.py
verifiers/math/: boxed_answer_verifier.py
verifiers/poetry/: haiku_verifier.py  limerick_verifier.py  rhyme_verifier.py  tanka_verifier.py  villanelle_verifier.py
verifiers/reasoning/: answer_satisfaction_verifier.py  reasoning_format_verifier.py  reasoning_format_with_verifier_answer_verifier.py  verifier_answer_verifier.py
(+19 files in other folders)
