[project]
name = "verifiers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.2.0",
    "jinja2>=3.1.5",
    "mlx-lm>=0.21.1",
    "ollama>=0.4.7",
    "pronouncing>=0.2.0",
    "pytest>=8.3.4",
    "setuptools>=75.8.0",
]
